profilr pick change

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="images\skimage.png" alt="shubham's_picture" width="300" height="300">
+      <img src="images\skimage2.jpg" alt="shubham's_picture" width="300" height="300">
       <h2>Hello</h2>
       <p class="intro">i am an upcoming full stack web developer and I'm very Exicted to develop a web sites in an corporate world.</p>
     </div>
